--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -48,6 +48,9 @@
 
   text-decoration: none;
   color: var(--color-button-text);
+
+  transition: background-color 0.2s;
+
 }
 
 .buttons-container a:first-child {
@@ -64,4 +67,55 @@
 
 .buttons-container a.give-classes {
   background: var(--color-secundary);
+}
+
+.buttons-container a.study:hover {
+  background: var(--color-primary-light);
+}
+
+.buttons-container a.give-classes:hover {
+  background: var(--color-secundary-dark);
+}
+
+.total-conections {
+  font-size: 1.4rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.total-conections img {
+  margin-left: 0.8rem;
+}
+
+@media (min-width: 1100px) {
+  #page-landing-content {
+    max-width: 1100px;
+
+    display: grid;
+    grid-template-rows: 350px 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-areas:
+      "logo hero hero"
+      "buttons buttons total"
+    ;
+  }
+
+  .logo-container {
+    grid-area: logo;
+  }
+
+  .hero-image {
+    grid-area: hero;
+  }
+
+  .buttons-container {
+    grid-area: buttons;
+  }
+
+  .total-conections {
+    grid-area: total;
+  }
 }
