--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -79,7 +79,6 @@
 
 .total-conections {
   font-size: 1.4rem;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,7 +90,7 @@
 }
 
 @media (min-width: 1100px) {
-  #page-landing-content {
+  #landing-page-content {
     max-width: 1100px;
 
     display: grid;
@@ -105,17 +104,36 @@
 
   .logo-container {
     grid-area: logo;
+    align-self: center;
+    text-align: left;
+    margin: 0 auto;
   }
 
   .hero-image {
     grid-area: hero;
+    justify-self: end;
+  }
+
+  .logo-container h2 {
+    text-align: initial;
+    font-size: 3.6rem;
+  }
+
+  .logo-container img {
+    height: 100%;
   }
 
   .buttons-container {
     grid-area: buttons;
+    justify-content: flex-start;
+  }
+
+  .buttons-container a {
+    font-size: 2.4rem;
   }
 
   .total-conections {
     grid-area: total;
+    justify-self: end;
   }
 }
