--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -85,8 +85,9 @@
 }
 
 
-.total-conections img {
+.total-conection img {
   margin-left: 0.8rem;
+
 }
 
 @media (min-width: 1100px) {
@@ -94,8 +95,8 @@
     max-width: 1100px;
 
     display: grid;
-    grid-template-rows: 350px 1fr;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 350px 2fr;
+    grid-template-columns: 2fr 1fr 2fr;
     grid-template-areas:
       "logo hero hero"
       "buttons buttons total"
@@ -132,8 +133,10 @@
     font-size: 2.4rem;
   }
 
-  .total-conections {
+  .total-conection {
     grid-area: total;
     justify-self: end;
+    margin-top: 20%;
+    font-size: 1.2rem;
   }
 }
